Add knowledge base integration with Flowise and Pinecone

--- a/package.json
+++ b/package.json
@@ -132,6 +132,7 @@
     "@lobehub/ui": "^1.164.10",
     "@neondatabase/serverless": "^0.10.4",
     "@next/third-parties": "^15.1.4",
+    "@pinecone-database/pinecone": "^4.1.0",
     "@react-spring/web": "^9.7.5",
     "@sentry/nextjs": "^7.120.2",
     "@serwist/next": "^9.0.11",
@@ -148,6 +149,7 @@
     "ai": "^3.4.33",
     "antd": "^5.23.0",
     "antd-style": "^3.7.1",
+    "axios": "^1.7.9",
     "brotli-wasm": "^3.0.1",
     "chroma-js": "^3.1.2",
     "dayjs": "^1.11.13",
