--- a/package.json
+++ b/package.json
@@ -124,6 +124,7 @@
     "@icons-pack/react-simple-icons": "9.6.0",
     "@khmyznikov/pwa-install": "0.3.9",
     "@langchain/community": "^0.3.22",
+    "@langchain/openai": "^0.4.2",
     "@lobehub/charts": "^1.12.0",
     "@lobehub/chat-plugin-sdk": "^1.32.4",
     "@lobehub/chat-plugins-gateway": "^1.9.0",
@@ -132,10 +133,10 @@
     "@lobehub/ui": "^1.164.10",
     "@neondatabase/serverless": "^0.10.4",
     "@next/third-parties": "^15.1.4",
-    "@pinecone-database/pinecone": "^4.1.0",
     "@react-spring/web": "^9.7.5",
     "@sentry/nextjs": "^7.120.2",
     "@serwist/next": "^9.0.11",
+    "@supabase/supabase-js": "^2.48.1",
     "@t3-oss/env-nextjs": "^0.11.1",
     "@tanstack/react-query": "^5.62.16",
     "@trpc/client": "next",
@@ -149,7 +150,6 @@
     "ai": "^3.4.33",
     "antd": "^5.23.0",
     "antd-style": "^3.7.1",
-    "axios": "^1.7.9",
     "brotli-wasm": "^3.0.1",
     "chroma-js": "^3.1.2",
     "dayjs": "^1.11.13",
@@ -170,7 +170,7 @@
     "jose": "^5.9.6",
     "js-sha256": "^0.11.0",
     "jsonl-parse-stringify": "^1.0.3",
-    "langchain": "^0.3.10",
+    "langchain": "^0.3.15",
     "langfuse": "3.29.1",
     "langfuse-core": "3.29.1",
     "lodash-es": "^4.17.21",
@@ -255,7 +255,7 @@
     "@peculiar/webcrypto": "^1.5.0",
     "@semantic-release/exec": "^6.0.3",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.1.0",
+    "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/chroma-js": "^3.1.0",
     "@types/crypto-js": "^4.2.2",
