--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
-  "buildCommand": "NODE_OPTIONS=--max-old-space-size=6144 bun run build", 
-  "installCommand": "bun install"
+  "buildCommand": "NODE_OPTIONS=--max-old-space-size=6144 npm run build",
+  "installCommand": "npm install",
+  "framework": "nextjs"
 }
