--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,5 @@
   "buildCommand": "npm run build",
   "installCommand": "npm install --legacy-peer-deps",
   "framework": "nextjs",
-  "version": 2,
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/node@18"
-    }
-  ]
+  "version": 2
 }
