chore: update build settings and node version

--- a/.npmrc
+++ b/.npmrc
@@ -17,3 +17,7 @@ public-hoist-pattern[]=@auth/core
 public-hoist-pattern[]=@clerk/backend
 public-hoist-pattern[]=@clerk/types
 public-hoist-pattern[]=pdfjs-dist
+
+node-version=18.19.0
+legacy-peer-deps=true
+registry=https://registry.npmjs.org/
