--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "npm run build",
+  "buildCommand": "NODE_OPTIONS='--max_old_space_size=4096' npm run build",
   "installCommand": "npm install --legacy-peer-deps",
   "framework": "nextjs",
   "version": 2
